<resources>
    <string name="app_name">FringeDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_second">Second</string>
    <string name="fragment_third">Third</string>
    <string name="fragment_profile">Profile</string>

    <string name="my_projects">My Projects</string>
    <string name="design_your_room">Design Your Room</string>
    <string name="example_mood_board">Example Mood Board</string>
    <string name="my_profile">My Profile</string>

</resources>