<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_back"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <ImageView
        android:id="@+id/img_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bed_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_my_projects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="220dp"
        android:backgroundTint="#40769DBA"
        android:text="@string/my_projects"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_design_your_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:width="220dp"
        android:backgroundTint="#40769DBA"
        android:text="@string/design_your_room"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_btn_my_projects"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_example_mood_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:width="220dp"
        android:backgroundTint="#26769DBA"
        android:text="@string/example_mood_board"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_btn_design_your_room"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_btn_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:width="220dp"
        android:backgroundTint="#26769DBA"
        android:text="@string/my_profile"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_btn_example_mood_board"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="0dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/fringe_logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>